syntax = "proto3";

package stream_client;

option java_multiple_files = true;
option java_package = "hello.wondsn.tutorial";
option java_outer_classname = "HelloWorldProto";

service Simple {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SumStreamInteger (stream IntegerRequest) returns (SumReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message IntegerRequest {
  int32 num = 1;
}

message SumReply {
  int32 sum = 1;
}